bin/log/eoerror.log
./src/com/lotterLang/tools/AstPrinter.java:21: error: <R>accept(Visitor<R>) is not public in Expr; cannot be accessed from outside package
        return expr.accept(this);
                   ^
  where R is a type-variable:
    R extends Object declared in method <R>accept(Visitor<R>)
./src/com/lotterLang/tools/AstPrinter.java:26: error: lexeme is not public in Token; cannot be accessed from outside package
        return parenthesize(expr.getOperator().lexeme, expr.left, expr.right);
                                              ^
./src/com/lotterLang/tools/AstPrinter.java:26: error: left has private access in Binary
        return parenthesize(expr.getOperator().lexeme, expr.left, expr.right);
                                                           ^
./src/com/lotterLang/tools/AstPrinter.java:26: error: right has private access in Binary
        return parenthesize(expr.getOperator().lexeme, expr.left, expr.right);
                                                                      ^
./src/com/lotterLang/tools/AstPrinter.java:31: error: expression has private access in Grouping
        return parenthesize("group", expr.expression);
                                         ^
./src/com/lotterLang/tools/AstPrinter.java:36: error: value has private access in Literal
        if (expr.value = null) return "nil";
                ^
./src/com/lotterLang/tools/AstPrinter.java:36: error: incompatible types: Object cannot be converted to boolean
        if (expr.value = null) return "nil";
                       ^
./src/com/lotterLang/tools/AstPrinter.java:37: error: value has private access in Literal
        return expr.value.toString();
                   ^
./src/com/lotterLang/tools/AstPrinter.java:42: error: operator has private access in Unary
        return parenthesize(expr.operator.lexeme, expr.right);
                                ^
./src/com/lotterLang/tools/AstPrinter.java:42: error: lexeme is not public in Token; cannot be accessed from outside package
        return parenthesize(expr.operator.lexeme, expr.right);
                                         ^
./src/com/lotterLang/tools/AstPrinter.java:42: error: right has private access in Unary
        return parenthesize(expr.operator.lexeme, expr.right);
                                                      ^
./src/com/lotterLang/tools/AstPrinter.java:53: error: <R>accept(Visitor<R>) is not public in Expr; cannot be accessed from outside package
            builder.append(expr.accept(this));
                               ^
  where R is a type-variable:
    R extends Object declared in method <R>accept(Visitor<R>)
12 errors
